client/src/Calendar.css
.day {
  /* note: !important is needed to add styling to Material-UI components */
  width: 50px !important;
  min-width: 50px !important;
  height: 50px !important;
  border-radius: 100% !important;
  vertical-align: middle !important;
}

.day-highlight {
  /* note: !important is needed to add styling to Material-UI components */
  color: #555555 !important;
  background-color: #F5F5F5 !important;
}

.day-highlight:hover {
  /* note: !important is needed to add styling to Material-UI components */
  background-color: #DDDDDD !important;
}

.day-highlight-new {
  /* note: !important is needed to add styling to Material-UI components */
  color: #F57F17 !important;
  background-color: #FFF9C4 !important;
}

.day-highlight-new:hover {
  /* note: !important is needed to add styling to Material-UI components */
  background-color: #FFF59D !important;
}

.day-past {
  /* note: !important is needed to add styling to Material-UI components */
  color: #BBBBBB !important;
}

.boardRow {
  clear: both;
  display: table;
}

.calendar {
  display: inline-block;
}

#calendarHeader {
  /* note: !important is needed to add styling to Material-UI components */
  margin-bottom: 1rem !important;
  background-color: #FBC02D !important;
}

